--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-numpy
-pandas
-xgboost
-scikit-learn
-joblib
-flask
+numpy~=1.26.2
+pandas~=2.1.3
+xgboost~=2.0.3
+scikit-learn~=1.3.2
+joblib~=1.3.2
+flask~=3.0.0
+Pillow~=10.1.0
+matplotlib~=3.8.2
